<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:bind="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools">

  <data>

    <variable
      name="viewModel"
      type="work.kcs_labo.yumemitodoapp.MainActViewModel" />
  </data>

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainAct">

    <androidx.appcompat.widget.Toolbar
      android:id="@+id/toolbar"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:background="?attr/colorPrimary"
      android:minHeight="?attr/actionBarSize"
      android:theme="?attr/actionBarTheme"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:title="@string/app_name" />

    <EditText
      android:id="@+id/new_task"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:layout_marginTop="8dp"
      android:layout_marginEnd="8dp"
      android:ems="10"
      android:hint="@string/task_hint"
      android:inputType="textPersonName"
      app:layout_constraintEnd_toStartOf="@+id/add_btn"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <Button
      android:id="@+id/add_btn"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:layout_marginEnd="8dp"
      android:background="@drawable/add_btn"
      android:text="@string/add"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <Button
      android:id="@+id/all_btn"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:layout_marginBottom="8dp"
      android:background="@drawable/selected_btn"
      android:text="@string/all"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toStartOf="@+id/active_btn"
      app:layout_constraintStart_toStartOf="parent"
      bind:btnState="@{viewModel.allBtnEnable}" />

    <Button
      android:id="@+id/complete_btn"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginEnd="8dp"
      android:layout_marginBottom="8dp"
      android:background="@drawable/not_selected_btn"
      android:text="@string/completed"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toEndOf="@+id/active_btn"
      bind:btnState="@{viewModel.completedBtnEnable}" />

    <Button
      android:id="@+id/active_btn"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:layout_marginEnd="8dp"
      android:layout_marginBottom="8dp"
      android:background="@drawable/not_selected_btn"
      android:text="@string/active"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toStartOf="@+id/complete_btn"
      app:layout_constraintStart_toEndOf="@+id/all_btn"
      bind:btnState="@{viewModel.activeBtnEnable}" />

    <FrameLayout
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:layout_marginTop="8dp"
      android:layout_marginBottom="8dp"
      app:layout_constraintBottom_toTopOf="@+id/active_btn"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/add_btn" />
  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>